base1: Fix up the formatting of list-groups
These should be rendered a little more densely, and the size
of the dialog-list should not be a round number, as it becomes
hard to see that there are further items.

--- a/pkg/base1/cockpit.css
+++ b/pkg/base1/cockpit.css
@@ -306,6 +306,15 @@ a {
     min-width: 26px;
 }
 
+.list-group h4 {
+    margin-top: 0px;
+    margin-bottom: 5px;
+}
+
+.list-group p {
+    margin: 0px;
+}
+
 /* Well and Blankslate */
 
 .curtains {
@@ -982,7 +991,8 @@ div.timeline.timeline-end .timeline-md {
 
 /* Small list inside a dialog */
 .dialog-list {
-    max-height: 200px;
+    max-height: 230px;
     overflow-x: auto;
     border: 1px solid #CCC;
+    margin-bottom: 0px;
 }
